search bar fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <!-- todo list -->
 
-        <ul class="list tasks ">
+        <ul class="list tasks">
             <li class="list-item">
               <span>This is my first todo</span>
               <i class="far fa-trash-alt delete"></i>
@@ -43,7 +43,7 @@
         <!-- adding form -->
         <form class="add">
             <label class="add-label">Add a new task...</label>
-            <input class="search-input" type="text" name="add" />
+            <input class="add-input" type="text" name="add" />
         </form>
     </div>
     
